[gd_scene load_steps=3 format=3 uid="uid://0gw2p3i86sla"]

[ext_resource type="Script" path="res://addons/card_asset_generator/files/generator.gd" id="1_4yvbm"]
[ext_resource type="PackedScene" uid="uid://cyatuhib7ucg4" path="res://scenes/character_export.tscn" id="2_0kkoa"]

[node name="Generator" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4yvbm")

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Card Generator"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Generate resource files for cards based on downloaded CSV data."

[node name="Label4" type="Label" parent="."]
layout_mode = 2
text = "Download Card Data"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Download All" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Download All
"

[node name="Download Items" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Download Items"

[node name="Download Characters" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Download Characters"

[node name="Download Creatures" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "Download Creatures"

[node name="Download Places" type="Button" parent="HBoxContainer2"]
layout_mode = 2
disabled = true
text = "Download Places"

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Generate Cards"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Generate All" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Generate All
"

[node name="Generate Items" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Generate Items"

[node name="Generate Characters" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Generate Characters"

[node name="Generate Creatures" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Generate Creatures"

[node name="Generate Places" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "Generate Places"

[node name="Label5" type="Label" parent="."]
layout_mode = 2
text = "Export Cards"

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Export All" type="Button" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Export All
"

[node name="Export Items" type="Button" parent="HBoxContainer3"]
layout_mode = 2
text = "Export Items"

[node name="Export Characters" type="Button" parent="HBoxContainer3"]
layout_mode = 2
text = "Export Characters"

[node name="Export Creatures" type="Button" parent="HBoxContainer3"]
layout_mode = 2
text = "Export Creatures"

[node name="Export Places" type="Button" parent="HBoxContainer3"]
layout_mode = 2
disabled = true
text = "Export Places"

[node name="CharacterExport" parent="." instance=ExtResource("2_0kkoa")]

[connection signal="button_up" from="HBoxContainer2/Download Items" to="." method="_on_download_items"]
[connection signal="button_up" from="HBoxContainer2/Download Characters" to="." method="_on_download_characters"]
[connection signal="button_up" from="HBoxContainer2/Download Creatures" to="." method="_on_download_creatures"]
[connection signal="button_up" from="HBoxContainer/Generate Items" to="." method="_on_generate_items"]
[connection signal="button_up" from="HBoxContainer/Generate Characters" to="." method="_on_generate_characters"]
[connection signal="button_up" from="HBoxContainer/Generate Creatures" to="." method="_on_generate_creatures"]
[connection signal="button_up" from="HBoxContainer3/Export Items" to="." method="_on_export_items"]
[connection signal="button_up" from="HBoxContainer3/Export Characters" to="." method="_on_export_characters"]
[connection signal="button_up" from="HBoxContainer3/Export Creatures" to="." method="_on_export_creatures"]
